--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 PORT = 5006
 
-DB_HOST=localhost
+DB_HOST=85.239.234.19
 DB_PORT=3306
-DB_USER=
-DB_PASS=
-DB_NAME=
+DB_USER=chandrabuilder
+DB_PASS=MCfLGCwB8e5Bi4yT
+DB_NAME=chandrabuilder
 
 ADMIN_EMAIL=admin # Change later
 ADMIN_PASSWORD=ankit@chandra # Change later
