--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@adminjs/sequelize": "^4.1.1",
     "@adminjs/themes": "^1.0.1",
     "@adminjs/upload": "^4.0.2",
-    "adminjs": "^7.6.1",
+    "adminjs": "^7.8.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-fileupload": "^1.4.3",
+    "express-formidable": "^1.2.0",
+    "express-session": "^1.18.1",
     "express-validator": "^7.1.0",
     "mysql2": "^3.10.0",
     "node-cron": "^3.0.3",
